fixing bottom links and z-index issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
 }
 
 body{
-    background-color: var(--primary_blue);
+    background-color: #1C2362;
 }
 
 .hamburger{
@@ -61,8 +61,8 @@ body{
     align-items: center;
     background-color: var(--primary_blue);
     padding: 2rem;
+    border-bottom: solid 2px #101546;
     z-index: 1;
-    box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.25);
 }
 
 .hamburguer_icon{
@@ -80,7 +80,7 @@ body{
     margin:  auto;
     cursor: pointer;
     transition: 0.2s all;
-    z-index: inherit;
+    z-index: 2;
     
 }
 
@@ -94,7 +94,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5rem 0 1rem 0;
+    padding: 5rem 0 2rem 0;
     background: var(--primary_blue);
 }
 
@@ -114,7 +114,7 @@ body{
 }
 
 .sede_container_caes:hover{
-    background-color: var(--soft-blue);
+    opacity: .8;
 }
 
 
@@ -133,7 +133,7 @@ body{
 }
 
 .sede_container_roosevelt:hover{
-    background-color: var(--soft_green);
+    opacity: .8;
 }
 
 .sede_container_homeschool{
@@ -151,7 +151,7 @@ body{
 }
 
 .sede_container_homeschool:hover{
-    background: var(--primary_blue);
+    opacity: .8;
 }
 
 div.sede_logo_caes{
@@ -181,7 +181,6 @@ div.sede_logo_caes{
     background: var(--primary_blue);
     padding-top: 1rem;
     transition: 0.4s;
-    z-index: -1;
     
     
 }
@@ -189,6 +188,7 @@ div.sede_logo_caes{
 .menu_container.is-active{
     min-height: 100vh;
     right:100%;
+    z-index: 0;
     
 }
 
@@ -204,8 +204,9 @@ div.sede_logo_caes{
 }
 
 .menu_container .mi_colegio:hover{
-    background-color: var(--primary_blue);
-    color: rgb(16, 2, 77);
+
+    background-color: white;
+    color: var(--primary_blue);
 }
 
 .menu_container .mi_colegio svg{
@@ -219,60 +220,19 @@ div.sede_logo_caes{
     margin-top: 1rem;
 }
 
-.close_icon{
-    position: absolute;
-    top: 30px;
-    color: var(--primary_blue);
-    padding: 1rem;
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-}
 
-.close_icon svg{
-    margin-right: 10px;
-}
-
-.close_icon:hover{
-    background-color: var(--primary_blue);
-    color: white;
-}
-
-.menu_items{
-    margin-top: 1rem;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.menu_links{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-}
-
-
-.menu_links a{
-    padding-left: 30%;
-}
-
-.menu_links a:hover{
-    background-color: var(--primary_blue);
-}
-
-
-.menu_items li{
-    width: 100%;
-    list-style: none;
-    padding: 10px 0 10px 0;
-    color: white;
-    font-size: 16px;
+.menu_container .menu_links{
+    display: block;
     font-weight: bold;
+    color: white;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    padding-right: 0;
+    padding-left: 15%;
 }
 
-
-
-.menu_items li svg{
-    margin-right: 10px;
+.menu_container .menu_links:hover{
+    background-color: white;
+    color: #101546;
 }
+
